--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -5,29 +5,7 @@
 <% user_deck_flashcards_learnt_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ?", user_deck.id, nil).count %>
 <% user_deck_flashcards_to_review_count = @user_flashcards.where("user_deck_id = ? AND learnt IS NOT ? AND next_review < ?", user_deck.id, nil, Time.now).count %>
 
-<!-- Modal -->
-<div class="modal fade" id="ConfirmDeleteDeckModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Are you sure?</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Are you sure you want to delete this deck? This action cannot be undone.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <%# <button type="button" class="btn btn-danger">Delete</button> %>
-
-        <%= link_to user_deck_path(user_deck), :method => :delete, class: 'btn btn-danger', data: {toggle: :tab} do %>
-          Delete
-        <% end %>
-
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
 <div class="card mb-3 user_deck_card">
   <div class="row g-0">
