Made reviews and review badge number <= Date.today instead of <= Time.now

--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-center">
+<div class="card text-center mx-auto">
   <div class="card-header">
     Frequency rank: <%= @top_flashcard.frequency_rank %>
   </div>
