--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
 
+
+// Custom CSS:
+@import "custom";
+
 // Import fonts
 @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Merriweather&family=Teko:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Cabin+Sketch&family=Merriweather&family=Teko:wght@500&display=swap');
@@ -14,6 +18,8 @@
 
 // Buttons
 @import "base/buttons";
+
+@import "views/user_decks/index";
 
 // Set color scheme
 // $green: #197278;
@@ -41,16 +47,16 @@ html, body {
 
 /*------- Layouts -------*/
 
-// .navbar {
-//   // position: sticky;
-//   // top: 0;
-//   // z-index: 100;
-//   // height: 70px;
-//   // box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
-//   background: #004777;
-//   // color: $gray;
-//   // font-size: 30px;
-// }
+.navbar {
+  // position: sticky;
+  // top: 0;
+  // z-index: 100;
+  // height: 70px;
+  // box-shadow: 0 4px 4px -4px rgba(0,0,0,.2);
+  background: #004777;
+  // color: $gray;
+  // font-size: 30px;
+}
 
 // nav .navbar-nav li a, .navbar-brand {
 //   color: white !important;
@@ -92,9 +98,10 @@ html, body {
 #main {
   // overflow:auto;
   padding-top: 100px; /* to accommodate navbar and padding below navbar */
-  padding-bottom: 150px; /* this needs to be bigger than footer height*/
-  // min-height: 100%; /* temporary fix */
+  padding-bottom: 150px; /* this needs to be bigger than footer height */
+  min-height: 100vh; /* temporary fix */
   // height: 500px; /* temporary fix */
+  flex-direction: column;
 }
 
 .footer {
@@ -151,24 +158,6 @@ html, body {
 //   justify-content: center;
 //   align-items: center;
 // }
-
-.deck_card:hover {
-  // box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
-}
-
-
-.user_deck_card {
-  position: relative; // so the delete icon can have position:absolute and go in the top right of the user deck card
-}
-
-.user_deck_card_delete_icon {
-  display: inline-block;
-  float: right;
-  margin: 13px 5px 0 0;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
 
 // position: relative;
 
