--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -1,4 +1,4 @@
-<div class="card text-center mx-auto">
+<div class="card shadow text-center my-auto">
   <div class="card-header">
     Frequency rank: <%= @top_flashcard.frequency_rank %>
   </div>
