--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar myNavbar navbar-expand fixed-top navbar-dark bg-dark">
+<nav class="navbar myNavbar navbar-expand fixed-top navbar-dark " style="background-color:#011638;">
   <div class="container">
     <a class="navbar-brand" href="/">Verble</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,8 +41,8 @@
         </ul>
       <% end %>
       <% if user_signed_in? %>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown d-none d-md-block"> <%# d-none d-md-block hides this div on screens smaller than md %>
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Logged in as <%= current_user.email %>
             </a>
