--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
     <!-- ... -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <%# link href="app/assets/stylesheets/custom.css" rel="stylesheet"> %>
+    <link rel="stylesheet" type="text/css" href="app/assets/stylesheets/custom.scss">
+
 
     <title>Language Learning App</title>
   </head>
@@ -25,15 +30,16 @@
 
     <%= render "layouts/navbar" %>
     <div id="wrap">
-      <div id="main" class="container clear-top" style="max-width:800px;">
+      <div id="main" class="container d-flex flex-column" style="max-width:800px;">
       <%# <div> %>
 
         <%# This div displays flash notices and alerts etc. %>
         <% flash.each do |type, msg| %>
+          <%= type %>
           <div class="alert alert-success alert-dismissible fade show" role="alert">
-          <strong><%= msg %></strong>
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
+            <strong><%= msg %></strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
         <% end %>
 
         <%# For Devise: %>
@@ -44,5 +50,6 @@
       </div>
     </div>
     <%= render "layouts/footer" %>
+
   </body>
 </html>
