--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -120,7 +120,7 @@
             <%# <button type="button" class="btn btn-warning">Learn</button> %>
 
 
-            <%= link_to "Change learning schedule", get_learning_schedule_path(user_deck.id), method: :get, :class => "btn btn-primary", style: "width:32%;" %>
+            <%= link_to "Edit", get_learning_schedule_path(user_deck.id), method: :get, :class => "btn btn-primary", style: "width:32%;" %>
 
             <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
             <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
