--- a/app/assets/stylesheets/custom_bootstrap_theme.css
+++ b/app/assets/stylesheets/custom_bootstrap_theme.css
@@ -1,2 +1,2 @@
 /* remove rounding from cards, buttons and inputs */
-.card, .btn, .form-control { border-radius: 0; }
+/* .card, .btn, .form-control { border-radius: 0; } */
