--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar myNavbar navbar-expand fixed-top navbar-dark " style="background-color:#011638;">
+<nav class="navbar myNavbar navbar-expand fixed-top navbar-dark ">
   <div class="container">
     <a class="navbar-brand" href="/">Verble</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
