after running bundle install

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -42,7 +42,7 @@ html, body {
   // background-color: #FFE9F3;
   // background-color: #FFFBFC;
   // background-color: #BCE7FD;
-  background-color: #DDFFF7;
+  // background-color: #DDFFF7;
 }
 
 .card {
