--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -2,7 +2,8 @@
 <div class="row"> %>
   <%# <div class="col"> %>
 
-<div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 d-flex flex-xl-wrap">
+<%# <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 d-flex flex-xl-wrap"> %>
+<div class="d-flex flex-wrap g-4 row-cols-1 row-cols-sm-2">
 <%# <div class="d-flex flex-lg-wrap"> %>
 <%# <div class="card-group"> %>
 
