--- a/app/views/components/_user_deck_card.html.erb
+++ b/app/views/components/_user_deck_card.html.erb
@@ -7,7 +7,7 @@
 
 <%= render 'components/delete_user_deck_modal', user_deck: user_deck %>
 
-<div class="card shadow mb-4 user_deck_card">
+<div class="card shadow m-3 user_deck_card">
   <div class="row g-0">
     <div class="col-md-4 d-none d-md-block"> <%# d-none d-md-block hides this div on screen sizes smaller than md %>
       <%# <img src="images/<%= deck.name.downcase %><%#.jpg" class="img-fluid rounded-start" alt="..."> %>
@@ -113,23 +113,23 @@
           <%# <div class="btn-group" role="group">
 
             <%# <%= link_to "Show", user_deck_path(user_deck.id) %>
-            <%= link_to "Show", user_deck_path(user_deck.id), method: :get, id: 'show-button', :class => "btn btn-primary", style: "width:32%;" %>
+            <%= link_to "Show", user_deck_path(user_deck.id), method: :get, id: 'show-button', :class => "btn btn-primary", style: "width:24%;" %>
 
             <%# <%= link_to "Learn", user_deck_learn_path(user_deck.id) %>
-            <%= link_to "Learn", user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', :class => "btn btn-warning", style: "width:32%;" %>
+            <%= link_to "Learn", user_deck_learn_path(user_deck.id), method: :get , id: 'learn-button', :class => "btn btn-warning", style: "width:24%;" %>
             <%# <button type="button" class="btn btn-warning">Learn</button> %>
 
 
-            <%= link_to "Edit", get_learning_schedule_path(user_deck.id), method: :get, :class => "btn btn-primary", style: "width:32%;" %>
+            <%= link_to "Edit", get_learning_schedule_path(user_deck.id), method: :get, :class => "btn btn-primary", style: "width:24%;" %>
 
             <%# <%= link_to "Review", user_deck_path(user_deck.id) %>
             <%# <%= link_to "Review", user_deck_review_path(user_deck.id) %>
             <% if to_review_today_count > 0 %>
-              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger', style: "width:32%;", data: {toggle: :tab} do %>
+              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger', style: "width:24%;", data: {toggle: :tab} do %>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% else %>
-              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger disabled', style: "width:32%;", data: {toggle: :tab} do %>
+              <%= link_to user_deck_review_path(user_deck, answer_checked: false, answer_correct: false), method: :get, id: 'review-button', class: 'btn btn-danger disabled', style: "width:24%;", data: {toggle: :tab} do %>
                 Review <%= content_tag :span, to_review_today_count, class: 'badge bg-dark' %>
               <% end %>
             <% end %>
