--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,14 @@
       <%# <p class="notice"><%= notice %><%# </p>
       <%# <p class="alert"><%= alert %><%# </p> %>
 
+      <div id="background-circle-1">
+        <%= show_svg('circle_yellow.svg') %>
+      </div>
+
+      <div id="background-circle-2">
+        <%= show_svg('circle_pink.svg') %>
+      </div>
+
       <div id="background-svg">
         <%= show_svg('undraw_road_to_knowledge_.svg') %>
       </div>
