--- a/app/views/user_decks/index.html.erb
+++ b/app/views/user_decks/index.html.erb
@@ -11,7 +11,7 @@
 
   <% end %>
 <% else %>
-  <h2>No decks added yet.</h2>
+  <h1 class="text-center my-auto">No decks added yet.</h1>
 <% end %>
 
 <%# </div> %>
