--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,3 +88,8 @@ nav .navbar-nav li a, .navbar-brand {
   font-weight: 700;
   color: #FFBF00 !important;
 }
+
+footer {
+  background: #3454D1;
+  color: white;
+}
