change footer color

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -68,6 +68,10 @@ html, body {
   background-color: #E83F6F !important;
 }
 
+.bg-success {
+  background-color: #56E39F !important;
+}
+
 nav .navbar-nav li a, .navbar-brand {
   // color: white !important;
 }
