--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,11 +19,10 @@
 
 // Pages
 @import "views/static_pages";
+@import "views/user_decks/index";
 
 // Buttons
 @import "base/buttons";
-
-@import "views/user_decks/index";
 
 // Alerts
 @import "components/alert";
@@ -80,6 +79,7 @@ html, body {
   bottom: 300px;
   right: 25px;
   z-index: -1;
+  opacity: 0.5;
 }
 
 #background-circle-1 {
@@ -87,6 +87,7 @@ html, body {
   top: -300px;
   left: -250px;
   z-index: -1;
+  opacity: 0.5;
 }
 
 #background-circle-2 {
@@ -94,6 +95,7 @@ html, body {
   bottom: 100px;
   right: -250px;
   z-index: -1;
+  opacity: 0.5;
 }
 
 #main {
