--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,7 @@
-.alert {
-  width: 200px;
+#alert-bottom-right {
+  // width: 200px;
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 30px;
+  right: 30px;
+  z-index: 999;
 }
