--- a/app/views/components/_flashcard.html.erb
+++ b/app/views/components/_flashcard.html.erb
@@ -50,7 +50,7 @@
     Last reviewed 2 days ago
   </div>
 
-  <a class="btn btn-primary see-answer-button collapsed" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-primary collapsed fixed-bottom see-answer-button" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
     <div id="see-answer">
       See answer
     </div>
